--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,18 +7,21 @@
 body {
   font-family: Arial, Helvetica, Times New;
   background-color: #494949;
+
 }
 
 
 header h1 {
   font-size: 2.5em;
   color: #D2D2D2;
+  text-shadow: 0px 8px 16px rgba(0,0,0,0.2), 0 6px 20px rgba(0,0,0,0.19);
 }
 
 .container {
   /*border-radius: 8px;*/
   /*border: 2px solid;*/
   width: 80%;
+  max-width: 600px;
   margin: 10px auto;
   padding: 10px 10px;
   background-color: #506878;
