Add tweet image to index and add css style.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -54,6 +54,12 @@ header h1 {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
+.quote-info img {
+  display: block;
+  margin: 20px auto 0px;
+  height: 60px;
+}
+
 #quote {
   font-size: 2em;
 }
